--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -6,7 +6,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".Dashboard">
+    tools:context=".Dashboard"
+    tools:ignore="Hard Coded Text">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/log_waste"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/material_dynamic_secondary50"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        tools:ignore="HardCodedText">
+
+        <ImageView
+            android:id="@+id/log_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:src="@drawable/logwaste"
+            tools:ignore="HardCodedText">
+
+        </ImageView>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/tips_resources"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="50dp"
+        android:background="@color/material_dynamic_secondary50"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/comm_chall">
+
+        <ImageView
+            android:id="@+id/tips_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:src="@drawable/tips">
+
+        </ImageView>
+    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:id="@+id/imageView2"
@@ -19,70 +64,97 @@
         app:srcCompat="@drawable/qr" />
 
     <androidx.cardview.widget.CardView
-        android:background="@color/material_dynamic_secondary50"
-        android:id="@+id/log_waste"
+        android:id="@+id/goals"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="45dp"
+        android:background="@color/material_dynamic_secondary50"
         app:cardCornerRadius="10dp"
-        android:text="Log Waste"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logwaste" >
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/logwaste"
-            android:clickable="true">
+            android:id="@+id/goal_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:src="@drawable/goals">
+
         </ImageView>
+
 
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/goal"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="60dp"
-        android:text="Goal"
-        app:layout_constraintEnd_toStartOf="@+id/tips_resources"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/log_waste" >
+        android:id="@+id/community_challenges"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:background="@color/material_dynamic_secondary50"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" >
 
+        <ImageView
+            android:id="@+id/community_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:src="@drawable/community_challenges_transparent">
 
+        </ImageView>
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/logwaste"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Goal"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/community_challenges"
-        app:layout_constraintEnd_toEndOf="@+id/goal"
-        app:layout_constraintStart_toStartOf="@+id/goal"
-        app:layout_constraintTop_toBottomOf="@+id/goal">
-
-    </TextView>
-
-    <Button
-        android:id="@+id/tips_resources"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="60dp"
-        android:text="Tips and Resources"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/goal"
+        android:layout_marginTop="24dp"
+        android:text="Log Waste"
+        app:layout_constraintEnd_toEndOf="@+id/log_waste"
+        app:layout_constraintStart_toStartOf="@+id/log_waste"
         app:layout_constraintTop_toBottomOf="@+id/log_waste" />
 
-    <Button
-        android:id="@+id/community_challenges"
-        android:layout_width="325dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="50dp"
+    <TextView
+        android:id="@+id/comm_chall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:text="Community Challenges"
+        app:layout_constraintEnd_toEndOf="@+id/community_challenges"
+        app:layout_constraintStart_toStartOf="@+id/community_challenges"
+        app:layout_constraintTop_toBottomOf="@+id/community_challenges" />
+
+    <TextView
+        android:id="@+id/goal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Goals"
+        app:layout_constraintEnd_toEndOf="@+id/goals"
+        app:layout_constraintStart_toStartOf="@+id/goals"
+        app:layout_constraintTop_toBottomOf="@+id/goals" />
+
+    <TextView
+        android:id="@+id/tips_reso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Tips and Resources"
         app:layout_constraintEnd_toEndOf="@+id/tips_resources"
-        app:layout_constraintStart_toStartOf="@+id/goal"
+        app:layout_constraintStart_toStartOf="@+id/tips_resources"
         app:layout_constraintTop_toBottomOf="@+id/tips_resources" />
+
+    <Button
+        android:id="@+id/waste_hist"
+        android:layout_width="325dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="50dp"
+        android:text="Waste History"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tips_resources"
+        app:layout_constraintStart_toStartOf="@+id/goals" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
